fix overlap for mobile

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -37,3 +37,9 @@
         margin-top: 10rem;
     }
 }
+
+@media (max-width: 500px) {
+    .footer {
+        margin-top: 0;
+    }
+}
